--- a/Views/Principal/Index.cshtml
+++ b/Views/Principal/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+    index.cshtml del controlador Principal
+    ~ se llama virgulilla
 *@
-@{
-}
+<link href="~/css/estilos.css" rel="stylesheet" type="text/css">
+<h4 class="texto">Usando archivos estaticos</h4>
+<img src="~/images/react-wallpaper.jpg" alt="Se muestra un wallpaper de React" onclick="mostrar()">
+<br/>
+<img src="~/images/wp4924046-react-js-wallpapers.jpg" alt="Se muestra un wallpaper">
+<script src="~/js/miscript.js"></script>
