Pasando valores del controlador a la vista

--- a/Views/Empleado/Index.cshtml
+++ b/Views/Empleado/Index.cshtml
@@ -3,3 +3,12 @@
 *@
 @{
 }
+<html>
+    <body>
+        Carmet: @ViewBag.ci <br>
+        Nombre: @ViewBag.nombre <br>
+        Casado: @ViewBag.isCasado <br>
+        Estatura: @ViewBag.estatura <br>
+        Fecha de contrato: @ViewBag.fechaContratacion.ToString("dd/MM/yyyy") <br>
+    </body>
+</html>
