--- a/Views/Empleado/Index.cshtml
+++ b/Views/Empleado/Index.cshtml
@@ -4,6 +4,10 @@
     <head>
         @*referencia a bootstrap*@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    
+    @*@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+        aqui tambien evitamos usar esa referencia al haber creado la vista _ViewImports.cshtml 
+    *@
     </head>
     <body>
         @*Ocupamos el @siempre que querramos implementar codigo C# en nuestro HTML*@
@@ -11,7 +15,16 @@
         Nombre: @ViewBag.nombre <br>
         Casado: @ViewBag.isCasado <br>
         Estatura: @ViewBag.estatura <br>
-        Fecha de contrato: @ViewBag.fechaContratacion.ToString("dd/MM/yyyy") <br>
+        Fecha de contrato: @ViewBag.fechaContratacion.ToString("dd/MM/yyyy") 
+        <br>
+        <a asp-controller="empleado" asp-action="editar" asp-route-id="333">Enviando un parametro</a>
+        <br>
+        <a asp-controller="empleado" asp-action="editar2" asp-route-id="333" asp-route-apellido="Perales">Enviando dos parametros</a>
+        <br>
+        <a asp-controller="empleado" asp-action="editar3" asp-route-ci="321"> Enviando 1 parámetro por Query String </a>
+        <br />
+        <a asp-controller="empleado" asp-action="editar4" asp-route-ci="555" asp-route-ap="Sosa"> Enviando 2 parámetros por Query String </a>
+        <br />
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-4">
